<package format="2">
  <name>test_msgs</name>
  <version>0.0.0</version>

  <description>
    test msgs
  </description>

  <maintainer email="mustermann@cs.uni-bremen.de">Max Mustermann</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
</package>
